--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
-body{background-color:#E22294
-color:white}
+.cabeçalho {
+    background-color: #383D58;
+    color: white;
+     display: flex; }
+ .imagemcabeçalho{width: 30%;}
 
+    .
+ 
